@@ -103,12 +103,13 @@ Error is fixed, was due to a src/services/Services.hpp old code
   way Oger does it. This way, at next startup, the Ogre config dialog
   would be defaulted to in-game options.
 **** TODO GameState system switch and more client work
+     CLOCK: [2016-11-08 mar. 05:26]--[2016-11-08 mar. 05:43] =>  0:17
      CLOCK: [2016-11-07 lun. 01:15]--[2016-11-07 lun. 01:37] =>  0:22
      CLOCK: [2016-11-07 lun. 00:51]--[2016-11-07 lun. 01:10] =>  0:19
      CLOCK: [2016-11-07 lun. 00:13]--[2016-11-07 lun. 00:47] =>  0:34
      CLOCK: [2016-11-06 dim. 23:46]--[2016-11-07 lun. 00:10] =>  0:24
      CLOCK: [2016-11-05 sam. 02:50]--[2016-11-05 sam. 04:56] =>  2:06
-- [-] Find a better way to handle GeometryBuffer object	
+- [X] Find a better way to handle GeometryBuffer object	
   - [X] We need a GameState::draw() callback at least for geometrybuffers
     or a list of buffers in GameEngine (or a superclass) with a draw
     callback.
@@ -133,11 +134,11 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] Make the actual CEGUI::Font used for drawing text an instance member
       - [X] Update the overlay text
       - [X] Remove the mFpsGeometry "no update slot" text
-  - [ ] Try to make geometrybuffer's clipping rectangles more little
+- [X] Try to make geometrybuffer's clipping rectangles more little : not needed
+- [ ] If CI fixed, add image in README.md (add it anyway)
 - [ ] May remove the src/client/LoadingBar.* (not used anymore)
   Maybe keep it to change it to a CEGUI layout, used multiple times
   When generating local level the first time, when cloning a server etc...
-- [ ] If CI fixed, add image in README.md
 - [ ] These is (again) a segfault when cancel the Ogre3D config dialog
 **** DONE Client work
      CLOCK: [2016-11-04 ven. 02:26]--[2016-11-04 ven. 02:42] =>  0:16
